Use Android-compatible byte reads in restore fixtures without changing assertions